refactor(websocket): keep user session events only
WebSocket now handles only session logout events; LIST_* pushes and the
unused OPEN_PROSPECTS are gone.

- single injected handler bean (drop 4 manual instances)
- thread-safe session registry, per-session synchronized send, robust
  token parsing and INFO/WARN/ERROR logging
- immutable WebSocketMessage record and typed LogoutEventData payload
  (same JSON wire contract: token/userId)
- emit NEW_LOGIN, DISABLE_USER, DISABLE_ROLE, NOTIFICATION_LOGOUT and
  CLOSE_ALL_SESSIONS via virtual threads + daemon offline timer